--- a/expensify/package.json
+++ b/expensify/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
