--- a/expensify/package.json
+++ b/expensify/package.json
@@ -26,5 +26,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "jest": "^21.2.1"
   }
 }
