--- a/expensify/package.json
+++ b/expensify/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
     "moment": "^2.19.2",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
+    "raf": "^3.4.0",
     "react": "^16.1.1",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^15.1.0",
@@ -14,6 +18,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-test-renderer": "^16.1.1",
     "redux": "^3.7.2",
     "uuid": "^3.1.0"
   },
@@ -26,5 +31,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
