--- a/expensify/package.json
+++ b/expensify/package.json
@@ -7,6 +7,8 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
     "express": "^4.16.2",
+    "firebase": "^4.6.2",
+    "gh-pages": "^1.1.0",
     "moment": "^2.19.2",
     "node-sass-chokidar": "^0.0.3",
     "normalize.css": "^7.0.0",
@@ -34,7 +36,9 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "snapshotSerializers": [
