--- a/expensify/package.json
+++ b/expensify/package.json
@@ -25,6 +25,8 @@
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.1.1",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.3.0",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
   "scripts": {
