--- a/expensify/package.json
+++ b/expensify/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.2",
     "firebase": "^4.6.2",
     "gh-pages": "^1.1.0",
+    "history": "^4.7.2",
     "moment": "^2.19.2",
     "node-sass-chokidar": "^0.0.3",
     "normalize.css": "^7.0.0",
